trying to change structure of the project

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+1. Заменить все на процены
+2. Оформление ссылок
+3. Добвить комментарии (Капец как долго искать что-то)
+-->
+
 <!DOCTYPE html>
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
@@ -369,74 +375,91 @@
         </div>
     </section>
 
+<!--    <section class="cash_register">-->
+<!--        <p class="cash_register_title">-->
+<!--            Наши касса-->
+<!--        </p>-->
+<!--        <div class="about_register">-->
+<!--            <div class="register_btn">-->
+<!--                <a href="#!" class="register_btn_link">-->
+<!--                    <p class="register_btn_text">-->
+<!--                        О кассе-->
+<!--                    </p>-->
+<!--                    <img src="./img/svg/Rectangle%2013581.svg" alt="О кассе">-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="video_btn">-->
+<!--            <a href="#!" class="video_btn_link">-->
+<!--                <p class="video_btn_text">-->
+<!--                    Видео-->
+<!--                </p>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="characteristics_btn">-->
+<!--            <a href="#!" class="characteristics_btn_link">-->
+<!--                <p class="characteristics_btn_text">-->
+<!--                    Характеристики-->
+<!--                </p>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </section>-->
+
     <section class="cash_register">
-        <p class="cash_register_title">
-            Наши касса
-        </p>
-        <div class="about_register">
-            <div class="register_btn">
-                <a href="#!" class="register_btn_link">
-                    <p class="register_btn_text">
-                        О кассе
-                    </p>
-                    <img src="./img/svg/Rectangle%2013581.svg" alt="О кассе">
-                </a>
+            <p class="register_title">
+                    Наши касса
+            </p>
+            <div class="register_wrapper">
+                <nav class="register_nav">
+                    <ul class="register_list">
+                        <li class="register_item">
+                            <a href="#!" class="register_link">О кассе</a>
+                        </li>
+                        <li class="register_item">
+                            <a href="#!" class="register_link">Видео</a>
+                        </li>
+                        <li class="register_item">
+                            <a href="#!" class="register_link">Характеристики</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-        </div>
-        <div class="video_btn">
-            <a href="#!" class="video_btn_link">
-                <p class="video_btn_text">
-                    Видео
-                </p>
-            </a>
-        </div>
-        <div class="characteristics_btn">
-            <a href="#!" class="characteristics_btn_link">
-                <p class="characteristics_btn_text">
-                    Характеристики
-                </p>
-            </a>
-        </div>
-        <p class="cash_register_name">
-            НЕВА— 01— Ф
-        </p>
     </section>
 
 
-    <section class="choose_thing">
-        <p class="choose_title">
-            Выбери то, что нужно тебе
-        </p>
-        <div class="about_buying">
-            <div class="buy_btn">
-                <a href="#!" class="buy_btn_link">
-                    <p class="buy_btn_text">
-                        Купить
-                    </p>
-                    <img src="./img/svg/Rectangle%2013581.svg" alt="Купить">
-                </a>
-            </div>
-        </div>
-        <div class="rent_btn">
-            <a href="#!" class="rent_btn_link">
-                <p class="rent_btn_text">
-                    Аренда
-                </p>
-            </a>
-        </div>
-        <div class="soft_btn">
-            <a href="#!" class="soft_btn_link">
-                <p class="soft_btn_text">
-                    Наше ПО
-                </p>
-            </a>
-        </div>
-        <div class="chose_solution">
-            <p class="solution_text">
-                Выбери решение, которое максимально подходит твоему бизнесу,
-                 и посмотри прогнозируемый рост выручки
-            </p>
-        </div>
+    <p class="cash_register_name">
+        НЕВА— 01— Ф
+    </p>
+
+<!--    <section class="choose_thing">-->
+<!--        <p class="choose_title">-->
+<!--            Выбери то, что нужно тебе-->
+<!--        </p>-->
+<!--        <div class="about_buying">-->
+<!--            <div class="buy_btn">-->
+<!--                <a href="#!" class="buy_btn_link">-->
+<!--                    <p class="buy_btn_text">-->
+<!--                        Купить-->
+<!--                    </p>-->
+<!--                    <img src="./img/svg/Rectangle%2013581.svg" alt="Купить">-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="rent_btn">-->
+<!--            <a href="#!" class="rent_btn_link">-->
+<!--                <p class="rent_btn_text">-->
+<!--                    Аренда-->
+<!--                </p>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="soft_btn">-->
+<!--            <a href="#!" class="soft_btn_link">-->
+<!--                <p class="soft_btn_text">-->
+<!--                    Наше ПО-->
+<!--                </p>-->
+<!--            </a>-->
+<!--        </div>-->
+
         <div class="perfect_solution">
             <p class="perfect_solution_title">
                 Идеальное решение для малого бизнеса
@@ -475,18 +498,128 @@
     </section>
 
 
-    <section class="script_business">
-        <button class="register_button">
-
-        </button>
-    </section>
-
-    </section>
-   <section class="final_block">
-        <div class="background_pic">
-               <img src="./img/svg/Rectangle%2090.svg" alt="Заключение">
+    <section class="choose_thing">
+        <p class="choose_title">
+            Выбери то, что нужно тебе
+        </p>
+        <div class="about_buying_wrapper">
+            <nav class="about_buying_nav">
+                <ul class="about_buying_list">
+                    <li class="about_buying_item">
+                        <a href="#!" class="about_buying_link">Купить</a>
+                    </li>
+                    <li class="about_buying_item">
+                        <a href="#!" class="about_buying_link">Аренда</a>
+                    </li>
+                    <li class="about_buying_item">
+                        <a href="#!" class="about_buying_link">Наше ПО</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="choose_solution">
+            <p class="solution_text">
+                Выбери решение, которое максимально подходит твоему бизнесу,
+                и посмотри прогнозируемый рост выручки
+            </p>
         </div>
     </section>
+
+
+
+    <section class="script_business">
+        <div class="first_script_button">
+            <p class="script_title1">
+                ККТ
+            </p>
+            <head>
+                <style>
+                    select {
+                        width: 553px;
+                        height: 60px;
+                        font-family: Open Sans,serif;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 25px;
+                        line-height: 25px;
+                    }
+                </style>
+            </head>
+            <body>
+            <form method="post" action="">
+                <p><select name="select">
+                    <option>Нева— 01— Ф</option>
+                    <option>Нева— 02— Ф</option>
+                </select></p>
+            </form>
+            </body>
+        </div>
+        <div class="second_script_button">
+            <p class="script_title2">
+                Сценарий роста бизнеса
+            </p>
+            <head>
+                <style>
+                    select {
+                        width: 553px;
+                        height: 60px;
+                        font-family: Open Sans,serif;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 25px;
+                        line-height: 25px;
+                    }
+                </style>
+            </head>
+            <body>
+            <form method="post" action="">
+                <p><select name="select">
+                    <option>Оценка эффективности рекламы</option>
+                    <option>Что-то еще</option>
+                </select></p>
+            </form>
+            </body>
+        </div>
+        <div class="third_script_button">
+            <p class="script_title3">
+                Сценарий роста бизнеса
+            </p>
+            <head>
+                <style>
+                    select {
+                        width: 553px;
+                        height: 60px;
+                        font-family: Open Sans,serif;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 25px;
+                        line-height: 25px;
+                    }
+                </style>
+            </head>
+            <body>
+            <form method="post" action="">
+                <p><select name="select">
+                    <option>Интерактивные видео уроки</option>
+                    <option>Что-то еще</option>
+                </select></p>
+            </form>
+            </body>
+        </div>
+        <div class="slider_wrapper">
+            <form onsubmit="return false" oninput="level.value = flevel.valueAsNumber">
+                <input name="flevel" id="flying" type="range" min="20" max="10000" value="20" step="10" class="slider">
+                <output for="flying" name="level">20</output>
+            </form>
+        </div>
+    </section>
+
+    </section>
+<!--   <section class="final_block">-->
+<!--        <div class="background_pic">-->
+<!--               <img src="./img/svg/Rectangle%2090.svg" alt="Заключение">-->
+<!--        </div>-->
+<!--    </section>-->
 </div>
 </body>
 </html>
